# ResearchNotebook

./: .dockerignore  .env.local.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  README.md  requirements.txt
backend/app/: __init__.py  config.py  embeddings.py  extract_text.py  llm.py  main.py  models.py  scrape.py  store.py  stt.py  utils.py  vector_store.py
backend/app/api/: __init__.py  chat.py  content.py  gpt.py  indexing.py  llm_options.py  projects.py  settings.py  sources.py  veo.py
backend/app/static/: app.js  index.html  styles.css
backend/tests/: conftest.py  test_api.py  test_store.py  test_utils.py
