[project]
name = "hyperbooklm"
version = "0.1.0"
description = "Local research assistant built on FastAPI with embeddings-based search and STT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "httpx",
    "pydantic",
    "python-dotenv",
    "chromadb",
    "sentence-transformers",
    "langchain-text-splitters",
    "pymupdf",
]

[project.optional-dependencies]
stt = [
    "faster-whisper",
]
ocr = [
    "pdfplumber",
    "python-docx",
    "python-pptx",
    "striprtf",
    "pandas",
    "openpyxl",
    "xlrd",
    "Pillow",
    "pytesseract",
    "odfpy",
    "rarfile",
    "py7zr",
    "python-magic",
    "extract-msg",
]
web = [
    "beautifulsoup4",
    "lxml",
    "markdown",
    "requests",
    "playwright",
    "PyYAML",
    "structlog",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
]
